# rclaude

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: IMAGE_SUPPORT.md
glaude/: __init__.py  __main__.py  auth.py  bot.py  cli.py  config.py  formatting.py  handlers.py  server.py  session.py  settings.py  setup_wizard.py  wrapper.py
rclaude/: __init__.py  __main__.py  auth.py  cli.py  config.py  formatting.py  image_handler.py  server.py  session.py  settings.py  setup_wizard.py  wrapper.py
rclaude/core/: __init__.py  claude_client.py  events.py  permissions.py  session.py
rclaude/docs/: permissions-haiku.md
rclaude/frontends/: __init__.py  base.py
rclaude/frontends/telegram/: __init__.py  formatting.py  frontend.py  keyboards.py
rclaude/server/: __init__.py  app.py
