[project]
name = 'glaude'
description = 'Telegram bot for remote Claude Code control'
requires-python = '>=3.14'
dynamic = ['version']
dependencies = [
    'python-telegram-bot>=22.0',
    'claude-agent-sdk>=0.1.0',
    'python-dotenv>=1.0.0',
]

[project.scripts]
glaude = 'glaude.__main__:main'

[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']
include = ['glaude*']

[tool.setuptools_scm]
version_scheme = 'guess-next-dev'
local_scheme = 'node-and-date'

[tool.ruff]
target-version = 'py314'
line-length = 140

[tool.ruff.lint]
ignore = ['E501']

[tool.ruff.format]
quote-style = 'single'

[tool.ty.environment]
python-version = '3.14'
