[project]
name = 'rclaude'
description = 'Remote control for Claude Code via Telegram'
readme = 'README.md'
license = 'MIT'
requires-python = '>=3.14'
dynamic = ['version']
authors = [
    { name = 'Leonard Buskin', email = 'leonardbuskin@gmail.com' },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: MacOS',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development :: Libraries :: Python Modules',
]
dependencies = [
    'python-telegram-bot>=22.0',
    'claude-agent-sdk>=0.1.0',
    'click>=8.0',
    'aiohttp>=3.9',
    'tomli-w>=1.0',
    'pexpect>=4.9',
    'watchfiles>=1.0',
]

[project.urls]
Homepage = 'https://github.com/leobuskin/rclaude'
Repository = 'https://github.com/leobuskin/rclaude'
Issues = 'https://github.com/leobuskin/rclaude/issues'

[project.scripts]
rclaude = 'rclaude.__main__:main'

[build-system]
requires = ['setuptools>=64', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']
include = ['rclaude*']

[tool.setuptools_scm]
version_scheme = 'guess-next-dev'
local_scheme = 'node-and-date'

[tool.ruff]
target-version = 'py314'
line-length = 140

[tool.ruff.lint]
ignore = ['E501']

[tool.ruff.format]
quote-style = 'single'

[tool.ty.environment]
python-version = '3.14'
